indexing and slicing

--- a/07-data-processing/02-pandas/03-indexing-slicing/indexing_slicing.ipynb
+++ b/07-data-processing/02-pandas/03-indexing-slicing/indexing_slicing.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a DataFrame\n",
+    "df = pd.DataFrame(data)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**DataFrame Creation:** We create a Pandas DataFrame named 'df' from the provided dictionary 'data'. This DataFrame contains information about employees, including their names, ages, cities, and salaries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -119,28 +136,11 @@
        "4     Emma   32    Sydney   65000"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# Creating a DataFrame\n",
-    "df = pd.DataFrame(data)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**DataFrame Creation:** We create a Pandas DataFrame named 'df' from the provided dictionary 'data'. This DataFrame contains information about employees, including their names, ages, cities, and salaries."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Displaying the DataFrame\n",
     "df"
@@ -155,31 +155,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 5 entries, 0 to 4\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column  Non-Null Count  Dtype \n",
-      "---  ------  --------------  ----- \n",
-      " 0   Name    5 non-null      object\n",
-      " 1   Age     5 non-null      int64 \n",
-      " 2   City    5 non-null      object\n",
-      " 3   Salary  5 non-null      int64 \n",
-      "dtypes: int64(2), object(2)\n",
-      "memory usage: 292.0+ bytes\n"
+      "Accessing data using index labels:\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>City</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>30</td>\n",
+       "      <td>New York</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>David</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Tokyo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Name  Age      City\n",
+       "1      Bob   30  New York\n",
+       "2  Charlie   35     Paris\n",
+       "3    David   28     Tokyo"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Indexing and Slicing\n",
     "print(\"Accessing data using index labels:\")\n",
-    "print(df.loc[1:3, 'Name':'City'])  # Using index labels for rows and columns"
+    "df.loc[1:3, 'Name':'City']  # Using index labels for rows and columns"
    ]
   },
   {
@@ -191,12 +241,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accessing data using integer positions:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>City</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>30</td>\n",
+       "      <td>New York</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Name  Age      City\n",
+       "1      Bob   30  New York\n",
+       "2  Charlie   35     Paris"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"Accessing data using integer positions:\")\n",
-    "print(df.iloc[1:3, 0:3])  # Using integer positions for rows and columns\n"
+    "df.iloc[1:3, 0:3]  # Using integer positions for rows and columns\n"
    ]
   },
   {
@@ -208,12 +319,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Boolean indexing:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>30</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>75000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>80000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Name  Age      City  Salary\n",
+       "1      Bob   30  New York   75000\n",
+       "2  Charlie   35     Paris   80000"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(\"Boolean indexing:\")\n",
-    "print(df[df['Salary'] > 70000])  # Filtering data based on a condition"
+    "df[df['Salary'] > 70000]  # Filtering data based on a condition"
    ]
   },
   {
@@ -247,14 +422,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Sample data\n",
     "data = {\n",
-    "    'EmployeeID': [101, 102, 103, 104, 105],\n",
     "    'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Emma'],\n",
-    "    'Department': ['HR', 'IT', 'Finance', 'Marketing', 'Sales'],\n",
+    "    'Age': [25, 30, 35, 28, 32],\n",
+    "    'City': ['London', 'New York', 'Paris', 'Tokyo', 'Sydney'],\n",
     "    'Salary': [60000, 75000, 80000, 70000, 65000]\n",
     "}"
    ]
