--- a/07-data-processing/02-pandas/03-indexing-slicing/solution.ipynb
+++ b/07-data-processing/02-pandas/03-indexing-slicing/solution.ipynb
@@ -2,189 +2,96 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# DataFrame Creation\n",
+    "# Sample data\n",
     "data = {\n",
-    "    'EmployeeID': [101, 102, 103, 104, 105],\n",
     "    'Name': ['Alice', 'Bob', 'Charlie', 'David', 'Emma'],\n",
-    "    'Department': ['HR', 'IT', 'Finance', 'Marketing', 'Sales'],\n",
+    "    'Age': [25, 30, 35, 28, 32],\n",
+    "    'City': ['London', 'New York', 'Paris', 'Tokyo', 'Sydney'],\n",
     "    'Salary': [60000, 75000, 80000, 70000, 65000]\n",
-    "}\n",
-    "employees = pd.DataFrame(data)\n"
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a DataFrame\n",
+    "employees = pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First 3 rows of the DataFrame:\n",
-      "   EmployeeID     Name Department  Salary\n",
-      "0         101    Alice         HR   60000\n",
-      "1         102      Bob         IT   75000\n",
-      "2         103  Charlie    Finance   80000\n",
+      "Indexing and Slicing:\n",
+      "Using label-based indexing:\n",
+      "    Name  Salary\n",
+      "3  David   70000\n",
+      "4   Emma   65000\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Data Exploration\n",
-    "print(\"First 3 rows of the DataFrame:\")\n",
-    "print(employees.head(3))  # Display first 3 rows\n",
-    "print()"
+    "# Task 2: Indexing and Slicing\n",
+    "print(employees.loc[3:4, ['Name', 'Salary']])  # Using index labels for rows and column names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Summary statistics for the 'Salary' column:\n",
-      "count        5.00000\n",
-      "mean     70000.00000\n",
-      "std       7905.69415\n",
-      "min      60000.00000\n",
-      "25%      65000.00000\n",
-      "50%      70000.00000\n",
-      "75%      75000.00000\n",
-      "max      80000.00000\n",
-      "Name: Salary, dtype: float64\n",
+      "Using positional-based indexing:\n",
+      "    Name  Salary\n",
+      "3  David   70000\n",
+      "4   Emma   65000\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(\"Summary statistics for the 'Salary' column:\")\n",
-    "print(employees['Salary'].describe())  # Summary statistics for Salary column\n",
-    "print()"
+    "# Using positional-based indexing\n",
+    "print(employees.iloc[3:5, [0, 3]])  # Using integer positions for rows and column positions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of employees in each department:\n",
-      "Department\n",
-      "HR           1\n",
-      "IT           1\n",
-      "Finance      1\n",
-      "Marketing    1\n",
-      "Sales        1\n",
-      "Name: count, dtype: int64\n",
-      "\n"
+      "Boolean indexing:\n",
+      "      Name  Age      City  Salary\n",
+      "1      Bob   30  New York   75000\n",
+      "2  Charlie   35     Paris   80000\n",
+      "4     Emma   32    Sydney   65000\n"
      ]
     }
    ],
    "source": [
-    "print(\"Number of employees in each department:\")\n",
-    "print(employees['Department'].value_counts())  # Count of employees in each department\n",
-    "print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average salary of employees: 70000.0\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Data Analysis\n",
-    "print(\"Average salary of employees:\", employees['Salary'].mean())  # Average salary\n",
-    "print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Employee(s) with the highest salary:\n",
-      "   EmployeeID     Name Department  Salary\n",
-      "2         103  Charlie    Finance   80000\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "max_salary = employees['Salary'].max()\n",
-    "print(\"Employee(s) with the highest salary:\")\n",
-    "print(employees[employees['Salary'] == max_salary])\n",
-    "print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Department with the lowest average salary: HR\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "min_avg_salary_dept = employees.groupby('Department')['Salary'].mean().idxmin()\n",
-    "print(\"Department with the lowest average salary:\", min_avg_salary_dept)\n",
-    "print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DataFrame with 'Salary Increase' column:\n",
-      "   EmployeeID     Name Department  Salary  Salary Increase\n",
-      "0         101    Alice         HR   60000          66000.0\n",
-      "1         102      Bob         IT   75000          82500.0\n",
-      "2         103  Charlie    Finance   80000          88000.0\n",
-      "3         104    David  Marketing   70000          77000.0\n",
-      "4         105     Emma      Sales   65000          71500.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "employees['Salary Increase'] = employees['Salary'] * 1.1  # Add new column for salary increase\n",
-    "print(\"DataFrame with 'Salary Increase' column:\")\n",
-    "print(employees)"
+    "# Task 3: Boolean Indexing\n",
+    "print(employees[employees['Age'] >= 30])  # Filtering data based on age"
    ]
   }
  ],
